[gd_scene load_steps=2 format=3 uid="uid://bgna6ltng3quh"]

[ext_resource type="Script" path="res://Lib/TagManager/tag.gd" id="1_qub58"]

[node name="Tag" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10
script = ExtResource("1_qub58")

[node name="Tag" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Example"
editable = false

[node name="Remove" type="Button" parent="."]
layout_mode = 2
text = "Remove"

[node name="Translation" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Translation"
editable = false

[node name="Replace" type="Button" parent="."]
layout_mode = 2
text = "Replace"

[node name="Newtag" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "New Tag to Replace"

[node name="Times" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "123"
horizontal_alignment = 1

[node name="Index" type="SpinBox" parent="."]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 1.0
rounded = true
allow_greater = true
alignment = 1

[node name="Move" type="Button" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Move"

[connection signal="button_up" from="Remove" to="." method="_on_remove_button_up"]
[connection signal="button_up" from="Replace" to="." method="_on_replace_button_up"]
[connection signal="pressed" from="Move" to="." method="_on_move_pressed"]
